:bug: fix login items alignment

--- a/src/index.css
+++ b/src/index.css
@@ -23,5 +23,5 @@ body,
 }
 
 h1 {
-  font-size: 1.8rem;
+  font-size: 1.3rem;
 }
